[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "example_library"
version = "0.1"
description = "A simple example Python library"
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3.6"
license = { text = "MIT" }
authors = [
    { name = "Chris McMacken", email = "chris.mcmacken@gmail.com" }
]

classifiers = [
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
]

[project.urls]
Homepage = "https://github.com/chrismcmacken/example_library"

[project.dependencies]
# No dependencies specified